@@ -4,7 +4,9 @@ pyReScene 0.3
  * pyReScene Auto: CD1.srr files were created in certain cases
  * pyReScene Auto: Subservience.2007.BDRip.XviD-DOCUMENT wasn't detected
    as a release
- * ReScene: -c flag works again
+ * pyReScene Auto: -c flag works again
+ * ReScene: -e output bug fixed
+ * pyReScene Auto: FIX-release inside release dir made it fail
 
 pyReScene 0.2
 =============
